--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -2,4 +2,56 @@
     cursor: pointer;
 }
 .todo.completed {
-    text-decoration: line-through;}
+    text-decoration: line-through;
+    color: green;
+}
+
+.wrapper {
+    min-height: 100px;
+    width: 400px;
+    margin: 60px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #9883ec;
+    border-radius: 5px;
+}
+#to-do-form input{
+    background-color: #f1ddfa;
+    border: 0;
+    width: 200px;
+    height: 30px;
+    padding: 0 20px;
+    margin: 20px 30px 20px 0px;
+    font-size: 18px;
+    border-radius: 10px;
+    color: darkblue;
+  }
+  #to-do-form input::placeholder{
+    color: rgba(3, 58, 58, 0.5);
+  }
+  #to-do-form input:focus{
+    outline: none;
+  }
+  #to-do-form button{
+    height: 30px;
+    width: 80px;
+    border-radius: 10px;
+    border: 0;
+    background-color: green;
+    cursor: pointer;
+    font-weight: bolder;
+    color: white;
+  }
+  .clear-btn{
+    height: 30px;
+    width: 120px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    border: 0;
+    background-color: green;
+    cursor: pointer;
+    font-weight: bolder;
+    color: white;
+  }
+  
